--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ img {
 
 #cards {
      padding-bottom: 200px;
+     position: relative;
 }
 
 #grow, #conversations, #users {
@@ -139,11 +140,12 @@ img {
      border-radius: 20px;
      text-align: center;
      position: absolute;
-     top: 2750px;
+     bottom: -100px;
+     left: 5%;
      width: 90%;
      height: 200px;
      box-shadow: 0 0 2px 2px #f4f4f4;
-     left: 5%;
+
 }
 
 #ready h3 {
