--- a/style.css
+++ b/style.css
@@ -24,15 +24,24 @@
 body {
      margin: 0;
      font-size: 10px;
+     font-family: 'Open Sans', sans-serif;
+     color: hsl(192, 100%, 9%);
+}
+
+h1, h2, h3, h4, h5, h6 {
+     font-family: 'Poppins', sans-serif;
+     font-weight: 600;
+}
+
+p {
+     font-weight: 400;
+     color: hsl(208, 11%, 55%);
 }
 
 
 /******************************************
 /* LAYOUT
 /*******************************************/
-header {
-
-}
 
 footer {
      background: hsl(192, 100%, 9%);
@@ -214,4 +223,130 @@ ion-icon {
 .attribution {
      padding-top: 50px;
      text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+     #intro {
+          display: flex;
+     }
+
+     #logo {
+          padding-top: 20px;
+          display: flex;
+          justify-content: space-between;
+     }
+
+     #logo > img {
+          height: 5%;
+     }
+
+     #heading-section {
+          display: flex;
+          flex-direction: row;
+          padding-top: 200px;
+     }
+
+     #heading {
+          display: flex;
+          flex-direction: column;
+          width: 50%;
+     }
+
+     #heading > a {
+          margin:0 auto 50px;
+          text-decoration: none;
+          color: white;
+          font-size: 1.8em;
+          background-color: rgb(255, 41, 180);
+          padding: 15px;
+          border-radius: 25px;
+          width: 70%;
+          text-align: center;     
+     }
+
+     #logo a {
+          color: rgb(0, 36, 42) !important;
+          text-align: center;
+          width: 10%;
+          height: 40px;
+          margin: 15px 50px 0;
+          padding-top: 10px;
+          text-decoration: none;
+          border-radius: 20px;
+          background: white;
+          font-size: 1.4em;  
+     }
+
+     #grow, #users {
+          display: flex;
+          flex-direction: row-reverse;
+          width: 80%;
+          margin: 50px auto;
+     }
+
+     #conversations {
+          display: flex;
+          flex-direction: row;
+          width: 80%;
+          margin: 50px auto;
+     }
+
+     #grow > img, #conversations > img, #users > img {
+          width: 50%;
+     }
+
+     .card {
+          width: 50%;
+          margin-top: 200px;
+     }
+
+     .card-title {
+          width: 70%;
+          text-align: justify;
+     }
+
+     .card-body {
+          width: 70%;
+          text-align: justify;
+     }
+
+     #footer-logo {
+          width: 30%;
+          margin-left: 150px;
+     }
+
+     #footer-links {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          width: 80%;
+          margin: auto;
+     }
+
+     #contact {
+          width: 33.3333%;
+     }
+
+     #links {
+          width: 33.3333%;
+     }
+
+     #links ul {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          width: 100%;
+          padding: 0;
+     }
+
+     #links li {
+          width: 50%;
+     }
+
+     #social {
+          width: 33.3333%;
+     }
+
+
+
 }
